Properly load in VLife style.

--- a/src/mod_rating_by_type/templates/pilot_vlife.html
+++ b/src/mod_rating_by_type/templates/pilot_vlife.html
@@ -9,6 +9,8 @@
 
 
 {% block content %}
+<link href="{% static 'css/vlife_style.css' %}" rel="stylesheet">
+
 <section id="vlife">
     <div class="wrapper">
         <div class="vlife_title">
