--- a/src/mod_rating_by_type/templates/pilot_sortie.html
+++ b/src/mod_rating_by_type/templates/pilot_sortie.html
@@ -697,7 +697,7 @@
                 {% endif %}
 
                 {% if sortie.score_dict.undamagedbailout_penalty %}
-                    <div class="row">
+                    <div class="row" style="height: auto;">
                         <div class="left">
                             {% trans 'Undamaged bailout penalty' %}
                         </div>
