--- a/src/mod_rating_by_type/templates/base.html
+++ b/src/mod_rating_by_type/templates/base.html
@@ -1,4 +1,4 @@
-r{% load i18n staticfiles tz stats %}
+{% load i18n staticfiles tz stats %}
 <!DOCTYPE html>
 <html lang="{{ LANGUAGE_CODE }}">
 <head>
