Revert "Merge branch 'master' into bundleMod"
This reverts commit cc08f9d1d267502adb872439e9a02d6162fe7981, reversing
changes made to 83e2e56cd04a7de62a47f4f884e1abdf9b53fa6b.

--- a/src/mod_rating_by_type/templates/base.html
+++ b/src/mod_rating_by_type/templates/base.html
@@ -1,4 +1,4 @@
-{% load i18n staticfiles tz stats %}
+r{% load i18n staticfiles tz stats %}
 <!DOCTYPE html>
 <html lang="{{ LANGUAGE_CODE }}">
 <head>
