--- a/src/mod_rating_by_type/templates/pilot.html
+++ b/src/mod_rating_by_type/templates/pilot.html
@@ -65,25 +65,50 @@
                     </div>
                 </div>
             </div>
+            {% if split_rankings %}
+            {% if light_player_exists and medium_player_exists or light_player_exists and heavy_player_exists or medium_player_exists and heavy_player_exists %}
             <div id="container" class="personas">
+                {% if cls == 'all' %}
                 <div class="persona selected">
-                    All
+                {% else %}
+                <div class="persona">
+                {% endif %}
+                    {% trans 'All' context 'persona' %}
                     <img src="{% static 'img/icons/personas/all-persona.png' %}">
                 </div>
+                {% if light_player_exists %}
+                {% if cls == 'light' %}
+                <div class="persona selected">
+                {% else %}
                 <div class="persona">
-                    Fighter
+                {% endif %}
+                    {% trans 'Fighter' %}
                     <img src="{% static 'img/icons/personas/fighter-persona.png' %}">
                 </div>
+                {% endif %}
+                {% if medium_player_exists %}
+                {% if cls == 'medium' %}
+                <div class="persona selected">
+                {% else %}
                 <div class="persona">
-                    Attacker
+                {% endif %}
+                    {% trans 'Attacker' %}
                     <img src="{% static 'img/icons/personas/attacker-persona.png' %}">
                 </div>
+                {% endif %}
+                {% if heavy_player_exists %}
+                {% if cls == 'heavy' %}
+                <div class="persona selected">
+                {% else %}
                 <div class="persona">
-                    Bomber
+                {% endif %}
+                    {% trans 'Bomber' %}
                     <img src="{% static 'img/icons/personas/bomber-persona.png' %}">
                 </div>
-
+                {% endif %}
             </div>
+            {% endif %}
+            {% endif %}
             <div class="profile_main_stats">
                 <div class="item">
                     <img src="{% static 'img/icons/big/ak.png' %}" width="" height="" title="" alt="">
