Get ironman pilots and tour.html working with FilteredPlayers/Vlifes

--- a/src/mod_rating_by_type/templates/pilot_vlife.html
+++ b/src/mod_rating_by_type/templates/pilot_vlife.html
@@ -56,7 +56,7 @@
         </div>
 
         {% if split_rankings %}
-        <div style = 'float:right;'>
+        <div style = 'float:right; margin-top: 10px'>
         {% if cls == 'all' %}
             <img src="{% static 'img/icons/personas/all-persona.png' %}">
         {% elif cls == 'light' %}
