--- a/src/mod_rating_by_type/templates/pilots.html
+++ b/src/mod_rating_by_type/templates/pilots.html
@@ -6,6 +6,8 @@
 {% endblock head %}
 
 {% block content %}
+    <link href="{% static 'css/personas.css' %}" rel="stylesheet">
+
     <section id="content">
         <div class="wrapper">
             <div class="content_head">
@@ -69,7 +71,7 @@
                                  alt="{% trans 'Gunnery Accuracy' %}" title="{% trans 'Gunnery Accuracy' %}">
                         </a>
                     </div>
-                    {% if split_rankings %}
+                    {% if split_rankings and cls == 'all' %}
                     <div class="cell" style="width: 90px;">
                         <a class="sort_by" href="?sort_by=-rating_light">
                             <img src="{% static 'img/icons/small/rating_light.png' %}" width="18" height="18"
@@ -110,7 +112,7 @@
                     <div class="cell">{{ player.kd }}</div>
                     <div class="cell">{{ player.khr }}</div>
                     <div class="cell">{{ player.accuracy }}%</div>
-                    {% if split_rankings %}
+                    {% if split_rankings and cls == 'all' %}
                     <div class="cell" title="{{ player.rating_light }}">{{ player.rating_format_light }}</div>
                     <div class="cell" title="{{ player.rating_medium }}">{{ player.rating_format_medium }}</div>
                     <div class="cell" title="{{ player.rating_heavy }}">{{ player.rating_format_heavy }}</div>
@@ -123,6 +125,60 @@
                     <div class="paginator3000" id="paginator"></div>
                 {% endif %}
             {% endif %}
+
+            {% if split_rankings %}
+            <div id="container" class="personas">
+                {% if cls == 'all' %}
+                <div class="persona selected">
+                {% else %}
+                <a href="{% url 'stats:pilots' %}?tour={{ request.tour.id }}&cls=all&sort_by={{ sort_by }}" >
+                <div class="persona" >
+                {% endif %}
+                    {% trans 'All' context 'persona' %}
+                    <img src="{% static 'img/icons/personas/all-persona.png' %}">
+                </div>
+                {% if cls != 'all' %}
+                </a>
+                {% endif %}
+                {% if cls == 'light' %}
+                <div class="persona selected">
+                {% else %}
+                <a href="{% url 'stats:pilots' %}?tour={{ request.tour.id }}&cls=light&sort_by={{ sort_by }}" >
+                <div class="persona" >
+                {% endif %}
+                    {% trans 'Fighter' %}
+                    <img src="{% static 'img/icons/personas/fighter-persona.png' %}">
+                </div>
+                {% if cls != 'light' %}
+                </a>
+                {% endif %}
+                {% if cls == 'medium' %}
+                <div class="persona selected">
+                {% else %}
+                <a href="{% url 'stats:pilots' %}?tour={{ request.tour.id }}&cls=medium&sort_by={{ sort_by }}" >
+                <div class="persona" >
+                {% endif %}
+                    {% trans 'Attacker' %}
+                    <img src="{% static 'img/icons/personas/attacker-persona.png' %}">
+                </div>
+                {% if cls != 'medium' %}
+                </a>
+                {% endif %}
+                {% if cls == 'heavy' %}
+                <div class="persona selected">
+                {% else %}
+                <a href="{% url 'stats:pilots' %}?tour={{ request.tour.id }}&cls=heavy&sort_by={{ sort_by }}" >
+                <div class="persona" >
+                {% endif %}
+                    {% trans 'Bomber' %}
+                    <img src="{% static 'img/icons/personas/bomber-persona.png' %}">
+                </div>
+                {% if cls != 'heavy' %}
+                </a>
+                {% endif %}
+            </div>
+            {% endif %}
+
 
             <div class="info" style="padding-top: 20px;">
                 <div>
