--- a/src/mod_rating_by_type/templates/pilot_awards.html
+++ b/src/mod_rating_by_type/templates/pilot_awards.html
@@ -53,7 +53,7 @@
             <a href="{{ player.get_light_awards_url }}" >
             <div class="persona" >
             {% endif %}
-                {% trans 'Fighter' %}
+                {% trans 'Fighter' context 'specialty' %}
                 <img src="{% static 'img/icons/personas/fighter-persona.png' %}">
             </div>
             {% endif %}
@@ -67,7 +67,7 @@
             <a href="{{ player.get_medium_awards_url }}" >
             <div class="persona" >
             {% endif %}
-                {% trans 'Attacker' %}
+                {% trans 'Attacker' context 'specialty' %}
                 <img src="{% static 'img/icons/personas/attacker-persona.png' %}">
             </div>
             {% endif %}
@@ -81,7 +81,7 @@
             <a href="{{ player.get_heavy_awards_url }}" >
             <div class="persona" >
             {% endif %}
-                {% trans 'Bomber' %}
+                {% trans 'Bomber' context 'specialty' %}
                 <img src="{% static 'img/icons/personas/bomber-persona.png' %}">
             </div>
             {% endif %}
