--- a/src/mod_rating_by_type/templates/pilot_sortie.html
+++ b/src/mod_rating_by_type/templates/pilot_sortie.html
@@ -162,7 +162,7 @@
                 {% if sortie.killboard_pvp.aircraft_medium %}
                     <div class="sub_row">
                         <div class="left">
-                            {% trans 'Attacker' context 'total' %}
+                            {% trans 'Attacker' context 'specialty' %}
                             <span>{{ sortie.killboard_pvp.aircraft_medium }}</span>
                         </div>
                         <div class="right score">
