--- a/src/mod_rating_by_type/templates/pilot_sorties.html
+++ b/src/mod_rating_by_type/templates/pilot_sorties.html
@@ -120,7 +120,7 @@
                 <a href="{{ player.get_light_sorties_url }}" >
                 <div class="persona" >
                 {% endif %}
-                    {% trans 'Fighter' %}
+                    {% trans 'Fighter' context 'specialty' %}
                     <img src="{% static 'img/icons/personas/fighter-persona.png' %}">
                 </div>
                 {% endif %}
@@ -134,7 +134,7 @@
                 <a href="{{ player.get_medium_sorties_url }}" >
                 <div class="persona" >
                 {% endif %}
-                    {% trans 'Attacker' %}
+                    {% trans 'Attacker' context 'specialty' %}
                     <img src="{% static 'img/icons/personas/attacker-persona.png' %}">
                 </div>
                 {% endif %}
@@ -148,7 +148,7 @@
                 <a href="{{ player.get_heavy_sorties_url }}" >
                 <div class="persona" >
                 {% endif %}
-                    {% trans 'Bomber' %}
+                    {% trans 'Bomber' context 'specialty' %}
                     <img src="{% static 'img/icons/personas/bomber-persona.png' %}">
                 </div>
                 {% endif %}
