--- a/src/mod_rating_by_type/templates/pilot_vlifes.html
+++ b/src/mod_rating_by_type/templates/pilot_vlifes.html
@@ -119,7 +119,7 @@
                 <a href="{{ player.get_light_vlifes_url }}" >
                 <div class="persona" >
                 {% endif %}
-                    {% trans 'Fighter' %}
+                    {% trans 'Fighter' context 'specialty' %}
                     <img src="{% static 'img/icons/personas/fighter-persona.png' %}">
                 </div>
                 {% endif %}
@@ -133,7 +133,7 @@
                 <a href="{{ player.get_medium_vlifes_url }}" >
                 <div class="persona" >
                 {% endif %}
-                    {% trans 'Attacker' %}
+                    {% trans 'Attacker' context 'specialty' %}
                     <img src="{% static 'img/icons/personas/attacker-persona.png' %}">
                 </div>
                 {% endif %}
@@ -147,7 +147,7 @@
                 <a href="{{ player.get_heavy_vlifes_url }}" >
                 <div class="persona" >
                 {% endif %}
-                    {% trans 'Bomber' %}
+                    {% trans 'Bomber' context 'specialty' %}
                     <img src="{% static 'img/icons/personas/bomber-persona.png' %}">
                 </div>
                 {% endif %}
