--- a/src/mod_rating_by_type/templates/pilot_vlife.html
+++ b/src/mod_rating_by_type/templates/pilot_vlife.html
@@ -56,16 +56,16 @@
         </div>
 
         {% if split_rankings %}
-        <div style = 'float:right; margin-top: 10px'>
-        {% if cls == 'all' %}
+        <div style='float:right; margin-top: 10px'>
+            {% if cls == 'all' %}
             <img src="{% static 'img/icons/personas/all-persona.png' %}">
-        {% elif cls == 'light' %}
+            {% elif cls == 'light' %}
             <img src="{% static 'img/icons/personas/fighter-persona.png' %}">
-        {% elif cls == 'medium' %}
+            {% elif cls == 'medium' %}
             <img src="{% static 'img/icons/personas/attacker-persona.png' %}">
-        {% elif cls == 'heavy' %}
+            {% elif cls == 'heavy' %}
             <img src="{% static 'img/icons/personas/bomber-persona.png' %}">
-        {% endif %}
+            {% endif %}
         </div>
         {% endif %}
 
@@ -80,7 +80,6 @@
         </a>
 
         <div class="clearfix"></div>
-
 
 
         <div class="profile_main_stats" style="margin-top: 30px;">
@@ -208,23 +207,51 @@
                 <div class="num">{{ vlife.gk_total }}</div>
             </div>
 
-            {% if vlife.killboard_pve.tank_heavy %}
+            {% if vlife.killboard_pvp.tank_heavy %}
             <div class="sub_item">
                 <div class="name">{% trans 'Heavy Tanks' context 'total' %}</div>
+                <div class="num">{{ vlife.killboard_pvp.tank_heavy }}</div>
+            </div>
+            {% endif %}
+
+            {% if vlife.killboard_pvp.tank_medium %}
+            <div class="sub_item">
+                <div class="name">{% trans 'Medium Tanks' context 'total' %}</div>
+                <div class="num">{{ vlife.killboard_pvp.tank_medium }}</div>
+            </div>
+            {% endif %}
+
+            {% if vlife.killboard_pvp.tank_light %}
+            <div class="sub_item">
+                <div class="name">{% trans 'Light Tanks' context 'total' %}</div>
+                <div class="num">{{ vlife.killboard_pvp.tank_light }}</div>
+            </div>
+            {% endif %}
+
+            {% if vlife.killboard_pvp.truck %}
+            <div class="sub_item">
+                <div class="name">{% trans 'Trucks' context 'total' %}</div>
+                <div class="num">{{ vlife.killboard_pvp.truck }}</div>
+            </div>
+            {% endif %}
+
+            {% if vlife.killboard_pve.tank_heavy %}
+            <div class="sub_item">
+                <div class="name">{% trans 'Heavy Tanks' context 'total' %} ({% trans 'AI' context 'total' %})</div>
                 <div class="num">{{ vlife.killboard_pve.tank_heavy }}</div>
             </div>
             {% endif %}
 
             {% if vlife.killboard_pve.tank_medium %}
             <div class="sub_item">
-                <div class="name">{% trans 'Medium Tanks' context 'total' %}</div>
+                <div class="name">{% trans 'Medium Tanks' context 'total' %} ({% trans 'AI' context 'total' %})</div>
                 <div class="num">{{ vlife.killboard_pve.tank_medium }}</div>
             </div>
             {% endif %}
 
             {% if vlife.killboard_pve.tank_light %}
             <div class="sub_item">
-                <div class="name">{% trans 'Light Tanks' context 'total' %}</div>
+                <div class="name">{% trans 'Light Tanks' context 'total' %} ({% trans 'AI' context 'total' %})</div>
                 <div class="num">{{ vlife.killboard_pve.tank_light }}</div>
             </div>
             {% endif %}
@@ -245,7 +272,7 @@
 
             {% if vlife.killboard_pve.truck %}
             <div class="sub_item">
-                <div class="name">{% trans 'Trucks' context 'total' %}</div>
+                <div class="name">{% trans 'Trucks' context 'total' %} ({% trans 'AI' context 'total' %})</div>
                 <div class="num">{{ vlife.killboard_pve.truck }}</div>
             </div>
             {% endif %}
