Add Portuguesse translations.

--- a/src/mod_rating_by_type/templates/overall.html
+++ b/src/mod_rating_by_type/templates/overall.html
@@ -221,7 +221,7 @@
                 {% if top_rating_light %}
                 <div class="top_pilots" style="float: left;">
                     <div class="top_title">
-                        {% trans 'Best fighter pilots' context 'overall' %}
+                        {% trans 'Best fighter pilots' context 'tour_top' %}
                     </div>
                     <div class="top_table">
                         <div class="head_row">
@@ -273,7 +273,7 @@
                 {% if top_rating_medium %}
                 <div class="top_pilots" style="float: left;">
                     <div class="top_title">
-                        {% trans 'Best attacker pilots' context 'overall' %}
+                        {% trans 'Best attacker pilots' context 'tour_top' %}
                     </div>
                     <div class="top_table">
                         <div class="head_row">
@@ -325,7 +325,7 @@
                 {% if top_rating_heavy %}
                 <div class="top_pilots" style="float: left;">
                     <div class="top_title">
-                        {% trans 'Best bomber pilots' context 'overall' %}
+                        {% trans 'Best bomber pilots' context 'tour_top' %}
                     </div>
                     <div class="top_table">
                         <div class="head_row">
