--- a/src/stats/templates/tankman_vlife.html
+++ b/src/stats/templates/tankman_vlife.html
@@ -96,23 +96,51 @@
                     <div class="num">{{ vlife.gk_total }}</div>
                 </div>
 
-                {% if vlife.killboard_pve.tank_heavy %}
+                {% if vlife.killboard_pvp.tank_heavy %}
                 <div class="sub_item">
                     <div class="name">{% trans 'Heavy Tanks' context 'total' %}</div>
+                    <div class="num">{{ vlife.killboard_pvp.tank_heavy }}</div>
+                </div>
+                {% endif %}
+
+                {% if vlife.killboard_pvp.tank_medium %}
+                <div class="sub_item">
+                    <div class="name">{% trans 'Medium Tanks' context 'total' %}</div>
+                    <div class="num">{{ vlife.killboard_pvp.tank_medium }}</div>
+                </div>
+                {% endif %}
+
+                {% if vlife.killboard_pvp.tank_light %}
+                <div class="sub_item">
+                    <div class="name">{% trans 'Light Tanks' context 'total' %}</div>
+                    <div class="num">{{ vlife.killboard_pvp.tank_light }}</div>
+                </div>
+                {% endif %}
+
+                {% if vlife.killboard_pvp.truck %}
+                <div class="sub_item">
+                    <div class="name">{% trans 'Trucks' context 'total' %}</div>
+                    <div class="num">{{ vlife.killboard_pvp.truck }}</div>
+                </div>
+                {% endif %}
+
+                {% if vlife.killboard_pve.tank_heavy %}
+                <div class="sub_item">
+                    <div class="name">{% trans 'Heavy Tanks' context 'total' %} ({% trans 'AI' context 'total' %})</div>
                     <div class="num">{{ vlife.killboard_pve.tank_heavy }}</div>
                 </div>
                 {% endif %}
 
                 {% if vlife.killboard_pve.tank_medium %}
                 <div class="sub_item">
-                    <div class="name">{% trans 'Medium Tanks' context 'total' %}</div>
+                    <div class="name">{% trans 'Medium Tanks' context 'total' %} ({% trans 'AI' context 'total' %})</div>
                     <div class="num">{{ vlife.killboard_pve.tank_medium }}</div>
                 </div>
                 {% endif %}
 
                 {% if vlife.killboard_pve.tank_light %}
                 <div class="sub_item">
-                    <div class="name">{% trans 'Light Tanks' context 'total' %}</div>
+                    <div class="name">{% trans 'Light Tanks' context 'total' %} ({% trans 'AI' context 'total' %})</div>
                     <div class="num">{{ vlife.killboard_pve.tank_light }}</div>
                 </div>
                 {% endif %}
@@ -133,7 +161,7 @@
 
                 {% if vlife.killboard_pve.truck %}
                 <div class="sub_item">
-                    <div class="name">{% trans 'Trucks' context 'total' %}</div>
+                    <div class="name">{% trans 'Trucks' context 'total' %} ({% trans 'AI' context 'total' %})</div>
                     <div class="num">{{ vlife.killboard_pve.truck }}</div>
                 </div>
                 {% endif %}
